Add Matomo tracker

--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
     <meta property="og:description" content="Strong Passwords Made Simple.">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Lilita+One&family=Parkinsans:wght@300..800&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
+    <script>
+      var _paq = window._paq = window._paq || [];
+      _paq.push(['trackPageView']);
+      _paq.push(['enableLinkTracking']);
+      (function() {
+        var u="https://matomo.shevapps.fr/";
+        _paq.push(['setTrackerUrl', u+'matomo.php']);
+        _paq.push(['setSiteId', '2']);
+        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+        g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+      })();
+    </script>
   </head>
   <body>
     <div id="app">
