--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <div id="app">
-      <div class="logo"><img src="logo.png"></div>
+      <div class="logo"><img src="logo.png" alt="Logo"></div>
       <h1 class="title">Make Password Strong Again</h1>
       <p class="subtitle">Strong Passwords Made Simple.</p>
 
